[tool.poetry]
name = "python-exercise"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_exercise"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.7.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
